--- a/composer.json
+++ b/composer.json
@@ -57,5 +57,9 @@
             "allow-contrib": false,
             "require": "4.2.*"
         }
+    },
+    "require-dev": {
+        "symfony/debug-pack": "^1.0",
+        "symfony/web-server-bundle": "4.2.*"
     }
 }
