--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
         "symfony/debug-pack": "^1.0",
         "symfony/web-server-bundle": "4.2.*"
     }
