--- a/.env
+++ b/.env
@@ -15,5 +15,5 @@ APP_SECRET=207ea9bda79e2df3ddb14fcd9ab2ae8f
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://root:@127.0.0.1:3306/sfcon_encore_2018
 ###< doctrine/doctrine-bundle ###
