--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,13 +20,8 @@ security:
                 authenticators:
                     - App\Security\LoginFormAuthenticator
 
-            # activate different ways to authenticate
-
-            # http_basic: true
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-
-            # form_login: true
-            # https://symfony.com/doc/current/security/form_login_setup.html
+            logout:
+                path: app_logout
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
