--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/serializer-pack": "^1.0",
         "symfony/translation": "4.2.*",
         "symfony/twig-bundle": "4.2.*",
+        "symfony/webpack-encore-bundle": "^1.0",
         "symfony/validator": "4.2.*",
         "symfony/yaml": "4.2.*"
     },
