--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
         "@symfony/webpack-encore": "^0.22.0",
         "bootstrap": "^4.1.3",
         "jquery": "^3.3.1",
+        "popper.js": "^1.14.6",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
