--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "devDependencies": {
         "@symfony/webpack-encore": "^0.22.0",
+        "bootstrap": "^4.1.3",
         "jquery": "^3.3.1",
         "webpack-notifier": "^1.6.0"
     },
