--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
         "bootstrap": "^4.1.3",
         "jquery": "^3.3.1",
         "jquery-tags-input": "^1.3.5",
+        "node-sass": "^4.10.0",
         "popper.js": "^1.14.6",
+        "sass-loader": "^7.0.1",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
