--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "jquery-tags-input": "^1.3.5",
         "node-sass": "^4.10.0",
         "popper.js": "^1.14.6",
+        "postcss-loader": "^3.0.0",
         "sass-loader": "^7.0.1",
         "webpack-notifier": "^1.6.0"
     },
