--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.5.0",
         "@symfony/webpack-encore": "^0.22.0",
+        "autoprefixer": "^9.4.0",
         "bootstrap": "^4.1.3",
         "jquery": "^3.3.1",
         "jquery-tags-input": "^1.3.5",
