--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
-    }
+    },
+    "browserslist": [
+        "> 5%"
+    ]
 }
